Added wizard for applying expense templates

--- a/accounting-ui/src/de/tfsw/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/tfsw/accounting/ui/messages.properties
@@ -151,6 +151,8 @@ AccountingUI_errorContextInfoIncomplete=Cannot build context, both user and DB f
 AddressWizardPage_desc=Enter contact details.\nThese can also be edited later
 AddressWizardPage_title=Contact details
 
+ApplyTemplatesWizard_title=Apply Expense Templates
+
 CancelInvoiceCommand_confirmMessage=Are you sure you want to cancel invoice [{0}] ?
 CancelInvoiceCommand_confirmText=Confirm cancel
 
@@ -179,6 +181,9 @@ ChooseExportTargetDialog_title=Export...
 
 ChooseReportCommand_message=Select the report to display
 ChooseReportCommand_title=Report selection
+
+ChooseTemplatesWizardPage_desc=Select the templates and dates you wish to convert into expenses
+ChooseTemplatesWizardPage_title=Select templates
 	
 ClientEditorInput_tooltip=Edit this client
 ClientNameWizardPage_desc=Enter the name of your new client
@@ -241,6 +246,15 @@ ExpenseTemplateEditHelper_forever=Forever
 ExpenseTemplateEditHelper_frequency=Frequency
 ExpenseTemplateEditHelper_interval=Interval
 ExpenseTemplateEditHelper_validFrom=Valid From
+
+ExpenseTemplateEditor_title=Edit Expense Template
+ExpenseTemplateEditor_sectionTemplate=Template Data
+ExpenseTemplateEditor_sectionRule=Recurrence Rule
+ExpenseTemplateEditor_sectionSummary=Summary
+ExpenseTemplateEditor_numberOfApplications=Number of applications:
+ExpenseTemplateEditor_lastApplication=Last application:
+ExpenseTemplateEditor_nextApplication=Next application:
+
 ExpenseTemplateWizard_Title=Expense Template
 ExpenseTemplateWizardPage_Desc=Define the template for a recurring expense
 ExpenseTemplateWizardPage_Title=Expense Template
@@ -257,6 +271,9 @@ ExportModelToXmlWizard_targetFile = Target File:
 ExportModelToXmlWizard_warningTargetFileExists = Target file already exists and will be overwritten!
 ExportModelToXmlWizard_finishedTitle = Export finished
 ExportModelToXmlWizard_finishedMsg = Export finished successfully to file [{0}]
+
+FindApplicableTemplatesHandler_noTemplatesMsg=No templates to apply - check whether you have active templates
+FindApplicableTemplatesHandler_noTemplatesTitle=No templates to apply
 
 FindInvoiceCommand_inputMessage=Enter the invoice number to search for
 FindInvoiceCommand_inputTitle=Find Invoice
