--- a/accounting-ui/src/de/tfsw/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/tfsw/accounting/ui/messages_de.properties
@@ -134,6 +134,8 @@ AccountingUI_errorContextInfoIncomplete=Kontext konnte nicht erstellt werden, so
 AddressWizardPage_desc=Bitte Kontaktinformationen eingeben.\nDiese k\u00F6nnen auch sp\u00E4ter noch eingegeben oder ge\u00E4ndert werden.
 AddressWizardPage_title=Kontaktinformationen
 
+ApplyTemplatesWizard_title=Ausgabenvorlagen Anwenden
+
 CancelInvoiceCommand_confirmMessage=Sind Sie sicher, dass Sie die Rechnung [{0}] stornieren wollen?
 CancelInvoiceCommand_confirmText=Rechnung stornieren?
 
@@ -162,6 +164,9 @@ ChooseExportTargetDialog_title=Export...
 
 ChooseReportCommand_message=W\u00E4hlen Sie den anzuzeigenden Report
 ChooseReportCommand_title=Report w\u00E4hlen
+
+ChooseTemplatesWizardPage_desc=W\u00E4hlen Sie die Vorlagen aus, die Sie zu Ausgaben anwenden wollen 
+ChooseTemplatesWizardPage_title=Vorlagen ausw\u00E4hlen
 
 ClientEditorInput_tooltip=Kunde bearbeiten
 ClientNameWizardPage_desc=Bitte geben Sie den Namen ihres neuen Kunden ein
@@ -224,6 +229,15 @@ ExpenseTemplateEditHelper_forever=Endlos
 ExpenseTemplateEditHelper_frequency=Frequenz
 ExpenseTemplateEditHelper_interval=Intervall
 ExpenseTemplateEditHelper_validFrom=G\u00FCltig ab
+
+ExpenseTemplateEditor_title=Ausgabenvorlage bearbeiten
+ExpenseTemplateEditor_sectionTemplate=Vorlage
+ExpenseTemplateEditor_sectionRule=Anwendungsregeln
+ExpenseTemplateEditor_sectionSummary=Zusammenfassung
+ExpenseTemplateEditor_numberOfApplications=Anzahl Anwendungen:
+ExpenseTemplateEditor_lastApplication=Letzte Anwendung:
+ExpenseTemplateEditor_nextApplication=N\u00E4chste Anwendung:
+
 ExpenseTemplateWizard_Title=Wiederkehrende Ausgabe
 ExpenseTemplateWizardPage_Desc=Vorlage f\u00FCr wiederkehrende Ausgaben definieren
 ExpenseTemplateWizardPage_Title=Ausgabenvorlage
@@ -240,6 +254,9 @@ ExportModelToXmlWizard_targetFile = Zieldatei:
 ExportModelToXmlWizard_warningTargetFileExists = Zieldatei existiert bereits und wird \u00FCberschrieben!
 ExportModelToXmlWizard_finishedTitle = Export beendet
 ExportModelToXmlWizard_finishedMsg = Export nach Datei [{0}] erfolgreich beendet
+
+FindApplicableTemplatesHandler_noTemplatesMsg=Keine anwendbaren Vorlagen gefunden. Pr\u00FCfen Sie die Konfiguration Ihrer Vorlagen.
+FindApplicableTemplatesHandler_noTemplatesTitle=Keine anwendbaren Vorlagen 
 
 FindInvoiceCommand_inputMessage=Rechnungsnummer f\u00FCr Suche eingeben:
 FindInvoiceCommand_inputTitle=Rechnung suchen
