added possibility to use existing expense as a basis for a new template

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -93,6 +93,7 @@ command.changeTimeFrame.lastYear = Last Year
 command.changeTimeFrame.custom = Custom...
 command.expenses.report = Create expense report
 command.expenseView.menu.pulldown = Expenses Pulldown Menu
+command.convertToTemplate.name = Convert to template...
 
 # COMMANDS - EXPENSE TEMPLATES	
 commandCategory.expense.template.name = Expense Template Command Category
