--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -90,6 +90,7 @@ command.changeTimeFrame.lastYear = Letztes Jahr
 command.changeTimeFrame.custom = Auswahl...
 command.expenses.report = Ausgabenbericht Erzeugen
 command.expenseView.menu.pulldown = Expenses Pulldown Menu
+command.convertToTemplate.name = In Vorlage umwandeln
 
 # COMMANDS - EXPENSE TEMPLATES
 command.viewExpenseTemplates.label = Ausgabenvorlagen
