applying template now a little more flexible

--- a/accounting-core/src/de/tfsw/accounting/messages.properties
+++ b/accounting-core/src/de/tfsw/accounting/messages.properties
@@ -54,6 +54,11 @@ AccountingService_errorClientNameExists=Client with name [{0}] already exists.
 AccountingService_errorClientNumberExists=Client with number [{0}] already exists.
 
 ###############################################################################
+# Model classes errors
+###############################################################################
+ExpenseTemplate_errorDateInFuture=Application date cannot be in the future: [{0}]
+
+###############################################################################
 # ExpenseImporter errors/warnings
 ###############################################################################
 
