--- a/accounting-core/src/de/tfsw/accounting/messages_de.properties
+++ b/accounting-core/src/de/tfsw/accounting/messages_de.properties
@@ -62,6 +62,11 @@ AccountingService_errorClientNameExists=Kunde mit Namen [{0}] existiert bereits.
 AccountingService_errorClientNumberExists=Kunde mit Nummer [{0}] existiert bereits.
 
 ###############################################################################
+# Model classes errors
+###############################################################################
+ExpenseTemplate_errorDateInFuture=Anwendungsdatum darf nicht in der Zukunft liegen: [{0}]
+
+###############################################################################
 # ExpenseImporter errors/warnings
 ###############################################################################
 
