Template editor updates

--- a/accounting-ui/src/de/tfsw/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/tfsw/accounting/ui/messages.properties
@@ -254,6 +254,8 @@ ExpenseTemplateEditor_sectionSummary=Summary
 ExpenseTemplateEditor_numberOfApplications=Number of applications:
 ExpenseTemplateEditor_lastApplication=Last application:
 ExpenseTemplateEditor_nextApplication=Next application:
+ExpenseTemplateEditor_resetConfirmTitle=Confirm Template Reset
+ExpenseTemplateEditor_resetConfirmMessage=Are you sure you want to reset this template?\n\nAfter resetting, the template will behave as if it had never been applied.
 
 ExpenseTemplateWizard_Title=Expense Template
 ExpenseTemplateWizardPage_Desc=Define the template for a recurring expense
