--- a/accounting-ui/src/de/tfsw/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/tfsw/accounting/ui/messages_de.properties
@@ -129,7 +129,7 @@ AccountingSplashHandler_welcomeDialogUseExisting=Eine existierende Speicherdatei
 AccountingSplashHandler_welcomeDialogImportXml=Daten aus XML-Datei importieren.
 
 AccountingUI_errorContextReInit=Kontext bereits gespeichert, Re-Initialisierung nicht erlaubt!
-AccountingUI_errorContextInfoIncomplete=Kontext konnte nicht erstellt werden, sowohl Nutzer ({0}) als auch DB Date ({1}) m\u00FCssen angegeben werden!
+AccountingUI_errorContextInfoIncomplete=Kontext konnte nicht erstellt werden, sowohl Nutzer ({0}) als auch DB Datei ({1}) m\u00FCssen angegeben werden!
 
 AddressWizardPage_desc=Bitte Kontaktinformationen eingeben.\nDiese k\u00F6nnen auch sp\u00E4ter noch eingegeben oder ge\u00E4ndert werden.
 AddressWizardPage_title=Kontaktinformationen
@@ -237,6 +237,8 @@ ExpenseTemplateEditor_sectionSummary=Zusammenfassung
 ExpenseTemplateEditor_numberOfApplications=Anzahl Anwendungen:
 ExpenseTemplateEditor_lastApplication=Letzte Anwendung:
 ExpenseTemplateEditor_nextApplication=N\u00E4chste Anwendung:
+ExpenseTemplateEditor_resetConfirmTitle=Vorlage zur\u00FCcksetzen?
+ExpenseTemplateEditor_resetConfirmMessage=Wollen Sie die Vorlage wirklich zur\u00FCsetzen?\n\nDanach verh\u00E4lt sich die Vorlage als w\u00E4re sie nie angewendet worden.
 
 ExpenseTemplateWizard_Title=Wiederkehrende Ausgabe
 ExpenseTemplateWizardPage_Desc=Vorlage f\u00FCr wiederkehrende Ausgaben definieren
