Finished user editor migration

--- a/accounting-ui-e4/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui-e4/OSGI-INF/l10n/bundle_de.properties
@@ -14,7 +14,58 @@
 # limitations under the License.
 ###############################################################################
 
+# deutsche Umlaute:
+# Ä = \u00C4
+# ä = \u00E4
+# Ö = \u00D6
+# ö = \u00F6
+# Ü = \u00DC
+# ü = \u00FC
+
 wuppdi = Wuppdi bei daitsche!
+
+# General / Often-used labels
+labelAdd = Hinzuf\u00FCgen
+
+labelBasicInformation = Grundinformationen:
+labelName = Name:
+labelTaxId = Steuernummer:
+labelDescription = Beschreibung
+
+# Address	
+labelAddress = Adresse
+labelRecipientDetail = Adresszusatz:
+labelStreet = Strasse:
+labelPostalCode = Postleitzahl:
+labelCity = Stadt:
+labelEmail = Email:
+labelPhone = Telefon:
+labelMobile = Mobil:
+labelFax = Fax:
+
+# Bank Account
+labelBankAccount = Bankverbindung 
+labelAccountNumber = Kontonummer:
+labelBankCode = Bankleitzahl:
+labelBankName = Bank:
+labelBIC = BIC:
+labelIBAN = IBAN:
+
+# User Editor
+userEditor = Benutzer
+userEditorHeader = Ihre Profildaten
+userEditorTaxRates = Steuers\u00E4tze
+userEditorTaxRateDescription = Verwalten Sie Ihre Steuers\u00E4tze
+userEditorTaxRateAbbreviation = Abk\u00FCrzung
+userEditorTaxRateName = Name
+userEditorTaxRate = Satz
+
+# Tax Rate Wizard
+taxRateWizard_windowTitle = Steuersatz-Wizard
+taxRateWizard_pageTitle = Neuer Steuersatz
+taxRateWizard_pageDesc = Erstellen Sie einen neuen Steuersatz f\u00FCr Ihre Rechnungen.
+taxRateWizard_errorMustBeNumber = Steuersatz muss eine Dezimahlzahl sein!
+taxRateWizard_isVat = Umsatz- / Mehrwertsteuer (Vorsteuer)
 
 # Welcome Dialog / Application Init
 welcomeDialog_title = Willkommen bei tfsw.de accounting!
