--- a/accounting-ui-e4/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui-e4/OSGI-INF/l10n/bundle.properties
@@ -19,6 +19,47 @@ product.name = tfsw.de accounting v2
 wuppdi = Default Locale Wuppdi
 
 # General / Often-used labels
+labelAdd = Add
+
+labelBasicInformation = Basic Information:
+labelName = Name:
+labelTaxId = Tax ID:
+labelDescription = Description
+
+# Address	
+labelAddress = Address
+labelRecipientDetail = Recipient Detail:
+labelStreet = Street:
+labelPostalCode = Post Code:
+labelCity = City:
+labelEmail = Email:
+labelPhone = Phone:
+labelMobile = Mobile:
+labelFax = Fax:
+
+# Bank Account
+labelBankAccount = Bank Account
+labelAccountNumber = Account Number:
+labelBankCode = Bank code / ID:
+labelBankName = Bank Name:
+labelBIC = BIC:
+labelIBAN = IBAN:
+
+# User Editor
+userEditor = User
+userEditorHeader = Edit user profile
+userEditorTaxRates = Tax Rates
+userEditorTaxRateDescription = Configure your tax rates
+userEditorTaxRateAbbreviation = Abbreviation
+userEditorTaxRateName = Name
+userEditorTaxRate = Rates
+
+# Tax Rate Wizard
+taxRateWizard_windowTitle = Tax Rate Wizard
+taxRateWizard_pageTitle = New Tax Rate
+taxRateWizard_pageDesc = Create a new tax rate for use in your invoices
+taxRateWizard_errorMustBeNumber = Tax rate value must be a decimal value!
+taxRateWizard_isVat = VAT / GST (deductible)
 
 # Welcome Dialog / Application Init
 welcomeDialog_title = Welcome to tfsw.de accounting!
