Setup dialog layout fixes

--- a/accounting-ui-e4/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui-e4/OSGI-INF/l10n/bundle.properties
@@ -70,9 +70,10 @@ welcomeDialog_importXml = Import data from XML.
 
 createNewWizard_windowTitle = Create new data
 
-setupWizards_dataFileLabel = Target database file (new):
+setupWizards_dataFileLabelNew = Target database file (new):
+setupWizards_dataFileLabelExisting = Target database file (existing):
 setupWizards_dataFileSelectText = Create file...
-setupWizards_errorDataFileExists = Cannot choose an existing file for your data\!
+setupWizards_errorDataFileExists = Cannot choose an existing file for your data\! Please choose new location.
 
 importFromXmlWizard_windowTitle = Import data
 importFromXmlWizard_pageTitle = Import data from XML file
