--- a/accounting-ui-e4/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui-e4/OSGI-INF/l10n/bundle_de.properties
@@ -76,9 +76,10 @@ welcomeDialog_importXml = Daten aus XML-Datei importieren.
 
 createNewWizard_windowTitle = Neue Daten anlegen
 
-setupWizards_dataFileLabel = Datenbank-Datei (neu):
+setupWizards_dataFileLabelNew = Datenbank-Datei (neu):
+setupWizards_dataFileLabelExisting = Datenbank-Datei (bestehend):
 setupWizards_dataFileSelectText = Zieldatei anlegen
-setupWizards_errorDataFileExists = Speicherdatei existiert bereits, bitte neue w\u00E4hlen.
+setupWizards_errorDataFileExists = Datenbankdatei existiert bereits, bitte neuen Speicherort w\u00E4hlen.
 
 importFromXmlWizard_windowTitle = Daten importieren
 importFromXmlWizard_pageTitle = Aus XML-Datei importieren
