migrated client editor

--- a/accounting-ui-e4/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui-e4/OSGI-INF/l10n/bundle.properties
@@ -21,33 +21,34 @@ wuppdi = Default Locale Wuppdi
 # General / Often-used labels
 labelAdd = Add
 
-labelBasicInformation = Basic Information:
-labelName = Name:
-labelTaxId = Tax ID:
+labelBasicInformation = Basic Information
+labelName = Name
+labelTaxId = Tax ID
 labelDescription = Description
 
 # Address	
 labelAddress = Address
-labelRecipientDetail = Recipient Detail:
-labelStreet = Street:
-labelPostalCode = Post Code:
-labelCity = City:
-labelEmail = Email:
-labelPhone = Phone:
-labelMobile = Mobile:
-labelFax = Fax:
+labelRecipientDetail = Recipient Detail
+labelStreet = Street
+labelPostalCode = Post Code
+labelCity = City
+labelEmail = Email
+labelPhone = Phone
+labelMobile = Mobile
+labelFax = Fax
 
 # Bank Account
 labelBankAccount = Bank Account
-labelAccountNumber = Account Number:
-labelBankCode = Bank code / ID:
-labelBankName = Bank Name:
-labelBIC = BIC:
-labelIBAN = IBAN:
+labelAccountNumber = Account Number
+labelBankCode = Bank code / ID
+labelBankName = Bank Name
+labelBIC = BIC
+labelIBAN = IBAN
 
 # User Editor
 userEditor = User
 userEditorHeader = Edit user profile
+userEditorHeaderDesc = Manage your data and settings on this page.\nMake sure to have all information necessary for creating invoices saved.
 userEditorTaxRates = Tax Rates
 userEditorTaxRateDescription = Configure your tax rates
 userEditorTaxRateAbbreviation = Abbreviation
@@ -61,6 +62,15 @@ taxRateWizard_pageDesc = Create a new tax rate for use in your invoices
 taxRateWizard_errorMustBeNumber = Tax rate value must be a decimal value!
 taxRateWizard_isVat = VAT / GST (deductible)
 
+# Client Editor
+clientEditorHeader = Client Editor
+labelClientName = Client Name
+labelClientNumber = Client Number
+
+labelPaymentTerms = Payment Terms
+labelPaymentType = Payment Type
+labelPaymentTarget = Payment target (in days)
+
 # Welcome Dialog / Application Init
 welcomeDialog_title = Welcome to tfsw.de accounting!
 welcomeDialog_message = It appears you are running the application for the first time.\nYou may now decide whether to import existing data or start from scratch.
@@ -70,19 +80,19 @@ welcomeDialog_importXml = Import data from XML.
 
 createNewWizard_windowTitle = Create new data
 
-setupWizards_dataFileLabelNew = Target database file (new):
-setupWizards_dataFileLabelExisting = Target database file (existing):
+setupWizards_dataFileLabelNew = Target database file (new)
+setupWizards_dataFileLabelExisting = Target database file (existing)
 setupWizards_dataFileSelectText = Create file...
 setupWizards_errorDataFileExists = Cannot choose an existing file for your data\! Please choose new location.
 
 importFromXmlWizard_windowTitle = Import data
 importFromXmlWizard_pageTitle = Import data from XML file
 importFromXmlWizard_pageMessage = Select the XML file to import and the new file location to store your data
-importFromXmlWizard_xmlFileLabel = File to import:
+importFromXmlWizard_xmlFileLabel = File to import
 importFromXmlWizard_xmlFileSelectText = Select XML File to import
 
 userNameAndDbFile_MessagePrefix = Enter your full name (as it will appear on an invoice)\n
 userNameAndDbFile_messageNew = and select a location where your data will be stored
 userNameAndDbFile_messageExisting = and select your existing data location file
-userNameAndDbFile_yourName = Your name:
+userNameAndDbFile_yourName = Your name
 userNameAndDbFile_errorNonExistingFile = File does not exist. Must choose an existing file for your data\!
