--- a/accounting-ui-e4/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui-e4/OSGI-INF/l10n/bundle_de.properties
@@ -27,33 +27,34 @@ wuppdi = Wuppdi bei daitsche!
 # General / Often-used labels
 labelAdd = Hinzuf\u00FCgen
 
-labelBasicInformation = Grundinformationen:
-labelName = Name:
-labelTaxId = Steuernummer:
+labelBasicInformation = Grundinformationen
+labelName = Name
+labelTaxId = Steuernummer
 labelDescription = Beschreibung
 
 # Address	
 labelAddress = Adresse
-labelRecipientDetail = Adresszusatz:
-labelStreet = Strasse:
-labelPostalCode = Postleitzahl:
-labelCity = Stadt:
-labelEmail = Email:
-labelPhone = Telefon:
-labelMobile = Mobil:
-labelFax = Fax:
+labelRecipientDetail = Adresszusatz
+labelStreet = Strasse
+labelPostalCode = Postleitzahl
+labelCity = Stadt
+labelEmail = Email
+labelPhone = Telefon
+labelMobile = Mobil
+labelFax = Fax
 
 # Bank Account
 labelBankAccount = Bankverbindung 
-labelAccountNumber = Kontonummer:
-labelBankCode = Bankleitzahl:
-labelBankName = Bank:
-labelBIC = BIC:
-labelIBAN = IBAN:
+labelAccountNumber = Kontonummer
+labelBankCode = Bankleitzahl
+labelBankName = Bank
+labelBIC = BIC
+labelIBAN = IBAN
 
 # User Editor
 userEditor = Benutzer
-userEditorHeader = Ihre Profildaten
+userEditorHeader = Benuzer- und Profildaten
+userEditorHeaderDesc = Verwalten Sie Ihre f\u00FCr die Rechnungserstellung notwendigen Stammdaten und Information.
 userEditorTaxRates = Steuers\u00E4tze
 userEditorTaxRateDescription = Verwalten Sie Ihre Steuers\u00E4tze
 userEditorTaxRateAbbreviation = Abk\u00FCrzung
@@ -67,6 +68,15 @@ taxRateWizard_pageDesc = Erstellen Sie einen neuen Steuersatz f\u00FCr Ihre Rech
 taxRateWizard_errorMustBeNumber = Steuersatz muss eine Dezimahlzahl sein!
 taxRateWizard_isVat = Umsatz- / Mehrwertsteuer (Vorsteuer)
 
+# Client Editor
+clientEditorHeader = Kundendaten Bearbeiten
+labelClientName = Kundenname
+labelClientNumber = Kundennr.
+
+labelPaymentTerms = Zahlungsbedingungen
+labelPaymentType = Zahlungsart
+labelPaymentTarget = Zahlungsziel (in Tagen)
+
 # Welcome Dialog / Application Init
 welcomeDialog_title = Willkommen bei tfsw.de accounting!
 welcomeDialog_message = Die Anwendung wird zum ersten mal ausgef\u00FChrt. Bitte w\u00E4hlen Sie, ob mit neuen Daten begonnen oder existierende importiert werden sollen.
@@ -76,19 +86,19 @@ welcomeDialog_importXml = Daten aus XML-Datei importieren.
 
 createNewWizard_windowTitle = Neue Daten anlegen
 
-setupWizards_dataFileLabelNew = Datenbank-Datei (neu):
-setupWizards_dataFileLabelExisting = Datenbank-Datei (bestehend):
+setupWizards_dataFileLabelNew = Datenbank-Datei (neu)
+setupWizards_dataFileLabelExisting = Datenbank-Datei (bestehend)
 setupWizards_dataFileSelectText = Zieldatei anlegen
 setupWizards_errorDataFileExists = Datenbankdatei existiert bereits, bitte neuen Speicherort w\u00E4hlen.
 
 importFromXmlWizard_windowTitle = Daten importieren
 importFromXmlWizard_pageTitle = Aus XML-Datei importieren
 importFromXmlWizard_pageMessage = W\u00E4hlen Sie eine XML-Datei zum importieren und einen Dateinamen f\u00FCr ihre Speicherdatei aus.
-importFromXmlWizard_xmlFileLabel = Importieren von:
+importFromXmlWizard_xmlFileLabel = Importieren von
 importFromXmlWizard_xmlFileSelectText = XML Datei f\u00FCr Import w\u00E4hlen
 
 userNameAndDbFile_MessagePrefix = Geben Sie Ihren vollen Namen an (wie er auf Rechnungen erscheint)\n
 userNameAndDbFile_messageNew = und w\u00E4hlen Sie einen Speicherort f\u00FCr Ihre Daten aus
 userNameAndDbFile_messageExisting = und w\u00E4hlen Sie Ihre existierende Speicherdatei aus.
-userNameAndDbFile_yourName = Ihr Name:
+userNameAndDbFile_yourName = Ihr Name
 userNameAndDbFile_errorNonExistingFile = Bitte w\u00E4hlen Sie eine existierende Speicherdatei aus\!
