Added input validation and newClient handler

--- a/accounting-ui-e4/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui-e4/OSGI-INF/l10n/bundle.properties
@@ -18,6 +18,10 @@ product.name = tfsw.de accounting v2
 # test / debug value
 wuppdi = Default Locale Wuppdi
 
+# Model / Menu Entries
+menu.client.new = New Client
+menu.client.new.tooltip = Create a new client
+
 # General / Often-used labels
 labelAdd = Add
 
@@ -25,6 +29,9 @@ labelBasicInformation = Basic Information
 labelName = Name
 labelTaxId = Tax ID
 labelDescription = Description
+
+errorValidationFailedTitle = Validation Errors!
+errorValidationFailedText = Cannot save due to validation failure.\nPlease correct and try again.
 
 # Address	
 labelAddress = Address
