--- a/accounting-ui-e4/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui-e4/OSGI-INF/l10n/bundle_de.properties
@@ -24,6 +24,10 @@
 
 wuppdi = Wuppdi bei daitsche!
 
+# Model / Menu Entries
+menu.client.new = Neuer Kunde
+menu.client.new.tooltip = Neuen Kunden erstellen
+
 # General / Often-used labels
 labelAdd = Hinzuf\u00FCgen
 
@@ -31,6 +35,9 @@ labelBasicInformation = Grundinformationen
 labelName = Name
 labelTaxId = Steuernummer
 labelDescription = Beschreibung
+
+errorValidationFailedTitle = Validierungsfehler!
+errorValidationFailedText = Speichern fehlerhafter Daten nicht m\u00F6glich!\nBitte zuerst Fehler beheben und erneut versuchen.
 
 # Address	
 labelAddress = Adresse
