added db init service, revamped UI init to match

--- a/accounting-ui-e4/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui-e4/OSGI-INF/l10n/bundle.properties
@@ -86,9 +86,9 @@ welcomeDialog_importXml = Import data from XML.
 
 createNewWizard_windowTitle = Create new data
 
-setupWizards_dataFileLabelNew = Target database file (new)
-setupWizards_dataFileLabelExisting = Target database file (existing)
-setupWizards_dataFileSelectText = Create file...
+setupWizards_dataFileLabelNew = Data location (new)
+setupWizards_dataFileLabelExisting = Data location (existing)
+setupWizards_dataFileSelectText = Select data location...
 setupWizards_errorDataFileExists = Cannot choose an existing file for your data\! Please choose new location.
 
 importFromXmlWizard_windowTitle = Import data
